# hexgrid-rs

./: .clippy.toml  .editorconfig  .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  README.md  rustfmt.toml
doc/: Cargo.toml  README.md  lib.rs
ref/HexGrids/discussions/: 443532.json  443654.json  444821.json  444824.json  444826.json  444874.json  446833.json  454424.json  632546.json  discussions.json
ref/HexGrids/issues/: issues.json
ref/HexGrids/issues/1281/: 1281.json
ref/HexGrids/issues/900/: 900.json
ref/HexGrids/issues/920/: 920.json
ref/HexGrids/license/: license.json
ref/HexGrids/releases/: releaseList.json
ref/HexGrids/releases/0/: 69d575c9-214d-4fa2-a52b-3783c00061e7  bf2b6d84-ceb2-4169-a71f-5d98c2ce36f0  fbb56254-7225-4189-bce6-95b30209a094
ref/HexGrids/releases/1/: 4fb58f6a-cc9c-4bd1-b671-5e4fe4275427  f9de3999-9829-4fde-a674-343188e3714e
ref/HexGrids/releases/10/: 7d6e4339-471c-4516-915e-f4e1a6fef255  b50d9e09-a795-412e-899b-fe3516da282c
ref/HexGrids/releases/12/: d9fa9baf-1f21-4467-8ac3-cd337646c6c2
ref/HexGrids/releases/2/: 94bf46c5-8555-4207-8f86-446884965294  af7a851b-18cf-487d-acdf-e83ea2cfe4ca
ref/HexGrids/releases/3/: 81caa0be-2c28-44e8-ab42-bd65d1aca2ba  e2f881ba-0c58-4947-99ee-7a330932521c
ref/HexGrids/releases/4/: 0efbbaa9-c0c3-4bbc-9da9-12840a6ea036  f49247f0-1457-48cd-a601-336cabda2345
ref/HexGrids/releases/5/: 1f37201a-d158-4d21-a0d5-8c032ef3ade5  feb41167-0885-4dc0-9c85-25ababb5708f
ref/HexGrids/releases/6/: 5f75ff23-83f1-4054-aca4-4085150ab1bb  8cde528f-039e-4e53-a346-da2c6459472c
src/: error.rs  lib.rs
(+22 files in other folders)
