[package]
name = "hexgrid"
version = "0.1.0"
edition = "2018"
authors = ["Mark H. Colburn <colburn.mark@gmail.com>"]
description = "A library to work with hex grids in Rust."
repository = "https://github.com/markcol/hexgrid-rs"
readme = "README.md"
license = "MIT"
# A list of up to 5 categories from https://crates.io/category_slugs. Must match exactly.
categories = ["game-engines", "algorithms"]
# A list of up to 5 keywords (free-form),
keywords = ["hex", "grid", "games"]

[badges]
travis-ci = { repository = "markcol/hexgrid-rs", branch = "master" }

[dependencies]
failure = "0.1"
log = "0.4"
pretty_env_logger = "0.3"
derive_more = "0.13"
